--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
-
+##swagger
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
