--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 ##PostgreSQL
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/votacao
-spring.datasource.username=postgres
-spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${DATABASE_URL}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 ##swagger
