acrescenta modificacoes config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-##PostgreSQL
+##server.port=$PORT:8080
 
-spring.datasource.url=${DATABASE_URL}
+##PostgreSQL
+spring.datasource.url={DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
