--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ##server.port=$PORT:8080
 
 ##PostgreSQL
-spring.datasource.url={DATABASE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
